Correct some spacing for h1 to be on separate lines at 1600x1200.

--- a/common.css
+++ b/common.css
@@ -115,6 +115,7 @@ h1 {
   margin-top: 0.4em;
   margin-bottom: 0.5em;
   line-height: 1.2;
+  letter-spacing: 2px;
 }
 
 h2 {
@@ -202,7 +203,7 @@ p {
 .sheet {
   display: table;
   background-color: white;
-  width: 90%;
+  width: 88%;
   max-width: 1600px;
   min-width: 1000px;
   margin: 4% auto 4% auto;
